--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,16 +15,16 @@
           
             <div class="columns-3 pull-left">
             {% if site.data.skills.section_programming_languages != empty %}
-            <p>{{ site.data.skills.section_programming_languages }}</h3>
+            <h3>{{ site.data.skills.section_programming_languages }}</h3>
             {% endif %}
             </div>
               
             <div class="columns-3">
             {% if site.data.skills.section_libraries != empty %}
             <h3>{{ site.data.skills.section_libraries }}</h3>
-              <p> Dear ImGui </p>
-              <p> SDL </p>
-              <p> OpenGL </p>
+              <p class="my-list"> Dear ImGui </p>
+              <p class="my-list"> SDL </p>
+              <p class="my-list"> OpenGL </p>
             {% endif %}
             </div>
               
