--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,21 +16,21 @@
             <div class="columns-3 pull-left">
             {% if site.data.skills.section_programming_languages != empty %}
             <h3>{{ site.data.skills.section_programming_languages }}</h3>
+                {% include programming-languages.html %}
             {% endif %}
             </div>
               
             <div class="columns-3">
             {% if site.data.skills.section_libraries != empty %}
             <h3>{{ site.data.skills.section_libraries }}</h3>
-              <p class="my-list"> Dear ImGui </p>
-              <p class="my-list"> SDL </p>
-              <p class="my-list"> OpenGL </p>
+              {% include libraries.html %}
             {% endif %}
             </div>
               
             <div class="columns-3 pull-right">
             {% if site.data.skills.section_software != empty %}
             <h3>{{ site.data.skills.section_software }}</h3>
+                {% include software.html %}
             {% endif %}
             </div>
           </div>
