--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,6 +1,6 @@
-<p class="my-list"> Dear ImGui </p>
-<p class="my-list"> OpenGL </p>
-<p class="my-list"> SDL </p>
-<p class="my-list"> OpenCV </p>
-<p class="my-list"> NumPy </p>
-<p class="my-list"> Vuforia </p>
+<li class="my-list"> Dear ImGui </li>
+<li class="my-list"> OpenGL </li>
+<li class="my-list"> SDL </li>
+<li class="my-list"> OpenCV </li>
+<li class="my-list"> NumPy </li>
+<li class="my-list"> Vuforia </li>
