--- a/_includes/software.html
+++ b/_includes/software.html
@@ -1,7 +1,7 @@
-<p class="my-list"> Unity </p>
-<p class="my-list"> Github </p>
-<p class="my-list"> VisualStudio </p>
-<p class="my-list"> Photoshop </p>
-<p class="my-list"> Illustrator </p>
-<p class="my-list"> Maya </p>
-<p class="my-list"> Excel </p>
+<p class="my-list">  - Unity </p>
+<p class="my-list">  - Github </p>
+<p class="my-list">  - VisualStudio </p>
+<p class="my-list">  - Photoshop </p>
+<p class="my-list">  - Illustrator </p>
+<p class="my-list">  - Maya </p>
+<p class="my-list">  - Excel </p>
