--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,7 @@
             <div class="columns-3 pull-left">
             {% if site.data.skills.section_programming_languages != empty %}
             <h3>{{ site.data.skills.section_programming_languages }}</h3>
+            <p class="my-line"></p>
                 {% include programming-languages.html %}
             {% endif %}
             </div>
@@ -23,6 +24,7 @@
             <div class="columns-3">
             {% if site.data.skills.section_libraries != empty %}
             <h3>{{ site.data.skills.section_libraries }}</h3>
+            <p class="my-line"></p>
               {% include libraries.html %}
             {% endif %}
             </div>
@@ -30,6 +32,7 @@
             <div class="columns-3 pull-right">
             {% if site.data.skills.section_software != empty %}
             <h3>{{ site.data.skills.section_software }}</h3>
+            <p class="my-line"></p>
                 {% include software.html %}
             {% endif %}
             </div>
