--- a/_includes/post-content.html
+++ b/_includes/post-content.html
@@ -6,11 +6,11 @@
   {% endif %}
 
   {% if post.year != empty %}
-  <h4 class="my-grey-color" style="display:inline-block">{{ post.year }}</h4>
+  <h4 class="my-grey-color">{{ post.year }}</h4>
   {% endif %}
   
   {% if post.time != empty %}
-  <h4 class="my-grey-color" style="display:inline-block">{{ post.time }}</h4>
+  <h4>"Time: "{{ post.time }}</h4>
   {% endif %}
   
   <p class="excerpt">
