--- a/_includes/post-content.html
+++ b/_includes/post-content.html
@@ -10,7 +10,7 @@
   {% endif %}
   
   {% if post.time != empty %}
-  <h4>"Time: "{{ post.time }}</h4>
+  <h4>Time: {{ post.time }}</h4>
   {% endif %}
   
   <p class="excerpt">
