--- a/_includes/programming-languages.html
+++ b/_includes/programming-languages.html
@@ -4,5 +4,5 @@
 <p class="my-list"> - Pyhton </p>
 <p class="my-list"> - Java </p>
 <p class="my-list"> - Javascript </p>
-<p class="my-list"> - lua </p>
-<p class="my-list"> - html </p>
+<p class="my-list"> - Lua </p>
+<p class="my-list"> - Html </p>
