--- a/css/style.scss
+++ b/css/style.scss
@@ -464,13 +464,16 @@ pre {
   @include bp-medium {
     float: none;
     width: 100%;
+    margin-bottom: 20px;
   }
   @include bp-small {
     float: none;
     width: 100%;
+    margin-bottom: 20px;
   }
   @include bp-xsmall {
     float: none;
     width: 100%;
+    margin-bottom: 20px;
   }
 }
