--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -30,6 +30,10 @@
             <br>
             <h4 class="text-center">{{site.email}}</h4>
             {% endif %}
+            
+            {% if site.cv_url != empty %}
+            <a href="{{ site.cv_url }}" class="project-link"><button class="btn btn-default btn-lg"></i>Resume</button></a>
+            {% endif %}
           </div>
 
           <div class="col-xs-12 col-md-6 pull-right">
