--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -32,7 +32,7 @@
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link"><button class="btn btn-default btn-lg"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link text-center"><button class="btn btn-default btn-lg"></i>Resume</button></a>
             {% endif %}
           </div>
 
