--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -16,7 +16,7 @@
             <br><br>
             <img class="img-responsive img-circle my-profile-pic" src="{{ site.url }}/Website/img/Picture.png">
           
-            <br><br>
+            <br>
             <div class="hero-buttons">
               {% if site.linkedin_url != '' %}
                 <a href="{{ site.linkedin_url }}"><i class="fa fa-linkedin fa-lg"></i></a>
@@ -27,12 +27,11 @@
             </div>
 
             {% if site.email != '' %}
-            <br>
             <h4 class="text-center">{{site.email}}</h4>
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link text-center"><button class="btn btn-default btn-lg"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link text-center" style="margin: 1em 33.333%"><button class="btn btn-default btn-lg"></i>Resume</button></a>
             {% endif %}
           </div>
 
