--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -25,13 +25,14 @@
                 <a href="{{ site.github_url }}"><i class="fa fa-github fa-lg"></i></a>
               {% endif %}
             </div>
-
+            
+            <br>
             {% if site.email != '' %}
             <h4 class="text-center">{{site.email}}</h4>
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link text-center" style="margin: 1em 33.333%"><button class="btn btn-default btn-lg"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link" style="margin: 0.5em auto"><button class="btn btn-default btn-lg"></i>Resume</button></a>
             {% endif %}
           </div>
 
