--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -26,13 +26,12 @@
               {% endif %}
             </div>
             
-            <br>
             {% if site.email != '' %}
-            <h4 class="text-center">{{site.email}}</h4>
+            <h4 class="text-center" style="margin-top:20px">{{site.email}}</h4>
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link" style="margin: 0.5em auto"><button class="btn btn-default btn-lg"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link text-center"><button class="btn btn-default btn-lg" style="margin: 0.5em 0 0 0"></i>Resume</button></a>
             {% endif %}
           </div>
 
