--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -31,7 +31,7 @@
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link text-center"><button class="btn btn-default btn-lg" style="margin: 0.5em 0 0 0"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link vertical_aligned"><button class="btn btn-default btn-lg" style="margin: 0.5em"></i>Resume</button></a>
             {% endif %}
           </div>
 
