--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
           <div class="navbar-header">
-              <a class="navbar-brand" href="/">{{ site.admin_name }}</a>
+              <a class="navbar-brand" href="/Website">{{ site.admin_name }}</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
