--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -31,7 +31,8 @@
             {% endif %}
             
             {% if site.cv_url != empty %}
-            <a href="{{ site.cv_url }}" class="project-link vertical-aligned" style="margin-bottom:1em"><button class="btn btn-default btn-lg" style="margin: 0.5em"></i>Resume</button></a>
+            <a href="{{ site.cv_url }}" class="project-link vertical-aligned"><button class="btn btn-default btn-lg" style="margin: 0.5em"></i>Resume</button></a>
+            <br>
             {% endif %}
           </div>
 
